--- a/templates/app1.html
+++ b/templates/app1.html
@@ -436,6 +436,9 @@
                 <br>
             </form>
             <button class="but" id="but" type="submit" form="paper">GENERATE!</button>
+            <form id="reset" method="POST" action="/reset">
+            <button class="but" id="write" type="submit" form="reset" style="position:relative; left: 270px; top: 165px;">RE-WRITE!</button>
+            </form>
         </div>
     </div>
 </div>
